tests/typechecking/invalid/int-out-Ofboundry.ml
let x = 11111111111111111111 in print_int x
